--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<nav class="header-nav">
 			<ul class="header-nav-list">
 				<li class="header-nav-list-item">
-					<a class="header-nav-list-link" style="color: #2196f3" href="./index.html">Студия</a>
+					<a class="header-nav-list-link header-nav-list-link_active" href="./index.html">Студия</a>
 				</li>
 				<li class="header-nav-list-item">
 					<a class="header-nav-list-link" href="./portfolio.html">Портфолио</a>
