--- a/portfolio.html
+++ b/portfolio.html
@@ -26,21 +26,21 @@
 					<a class="header-nav-list-link" href="./index.html">Студия</a>
 				</li>
 				<li class="header-nav-list-item">
-					<a class="header-nav-list-link" href="./portfolio.html">Портфолио</a>
+					<a class="header-nav-list-link header-nav-list-link_active" href="./portfolio.html">Портфолио</a>
 				</li>
 				<li class="header-nav-list-item">
 					<a class="header-nav-list-link" href="#Контакты">Контакты</a>
 				</li>
 			</ul>
 		</nav>
-		<!-- Header adress -->
-		<address class="adress">
-			<ul class="adress-item">
-				<li class="adress-list">
-					<a class="adress-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+		<!-- Header address -->
+		<address class="address">
+			<ul class="address-item">
+				<li class="address-list">
+					<a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
-				<li class="adress-list">
-					<a class="adress-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+				<li class="address-list">
+					<a class="address-tel" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</address>
@@ -50,8 +50,8 @@
 		<!-- Filters -->
 		<section class="section-filters">
 			<ul class="section-filters-item">
-				<li class="section-filters-list">
-					<button class="filters-modal-btn" type="button">Все</button>
+				<li class="section-filters-list section-filters-list_active">
+					<button class="filters-modal-btn filters-modal-btn_active" type="button">Все</button>
 				</li>
 				<li>
 					<button class="filters-modal-btn" type="button">Веб-сайты</button>
