--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,7 @@
 	<main class="portfolio">
 		<!-- Filters -->
 		<section class="section-filters">
+			<h2 hidden class="filters-title">Проекты</h2>
 			<ul class="section-filters-item">
 				<li class="section-filters-list section-filters-list_active">
 					<button class="filters-modal-btn filters-modal-btn_active" type="button">Все</button>
@@ -147,7 +148,7 @@
 					<a class="footer-address-mail" href="mailto:info@example.com">info@example.com</a>
 				</li>
 				<li class="footer-address-list">
-					<a class="footer-address-tel"href="tel:+380991111111">+38 099 111 11 11</a>
+					<a class="footer-address-tel" href="tel:+380991111111">+38 099 111 11 11</a>
 				</li>
 			</ul>
 		</address>
